--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,12 @@
     <string name="info_refferal_card_1">Let your friends join GARD with you referral link. Earn\ </string>
     <string name="info_refferal_card_2">25 PTS\  </string>
     <string name="info_refferal_card_3">for each friend after finishing first task!</string>
+    <string name="settings">Settings</string>
+    <string name="level">Level</string>
+    <string name="faq">FAQ</string>
+    <string name="police">Terms of Police</string>
+    <string name="log_out">Log Out</string>
+    <string name="nickname">Nickname</string>
+    <string name="email">E-Mail</string>
+    <string name="save">Save</string>
 </resources>
