[feature] DetailsScreen\InformationScreen UI implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="copied">Copied</string>
     <string name="saved">Your changes have been saved!</string>
     <string name="notifications">Notifications</string>
+    <string name="cancel">Cancel</string>
 </resources>
