--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,8 @@
     <string name="saved">Your changes have been saved!</string>
     <string name="notifications">Notifications</string>
     <string name="cancel">Cancel</string>
+    <string name="season">Season</string>
+    <string name="my_stats">MyStats</string>
+    <string name="connect_game">Connect Game</string>
+    <string name="confirmation">Confirmation</string>
 </resources>
