[fix] phone auth bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,9 +44,42 @@
     <string name="cancel">Cancel</string>
     <string name="season">Season</string>
     <string name="my_stats">MyStats</string>
+    <string name="my_stats_2">MyStats</string>
     <string name="connect_game">Connect Game</string>
     <string name="confirmation">Confirmation</string>
     <string name="shop">Shop</string>
     <string name="checkout">Checkout</string>
     <string name="collect">Collect</string>
+    <string name="failed_update_user">Failed to update user</string>
+    <string name="wrong_code">Wrong code</string>
+    <string name="another_code_sended">Another code was sended to your phone number</string>
+    <string name="sended_confirmation_code">We’ve send a confirmation code to your new phone number.\nType it to proceed</string>
+    <string name="send_code_again">Send  code again</string>
+    <string name="get_your_bonus">Get your bonus</string>
+    <string name="congratulations">Congratulations! You become</string>
+    <string name="lelvel_up">Level Up!</string>
+    <string name="invalid_phone_number">Invalid phone number</string>
+    <string name="too_many_requests">Too many requests</string>
+    <string name="type_your_phone_number">Type your phone number</string>
+    <string name="use_phone_number_sign_in">Use your phone number to both log in and sign in to GARD. Use only your actual mail</string>
+    <string name="type_your_nickname">Type your nickname</string>
+    <string name="use_actual_nickname">Use your actual nickname in Fortnite to connect game to your GARD games</string>
+    <string name="procedd">Proceed</string>
+    <string name="information">Information</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="statistic_reseted">Your statistics will be reseted as well.</string>
+    <string name="disconnect_from_my_games">Disconnect from my games</string>
+    <string name="to_the_tasks">To the tasks</string>
+    <string name="structure">Structure</string>
+    <string name="wrong_try_later">Something gone wrong. Try again later</string>
+    <string name="copy">Copy</string>
+    <string name="contacts">Contacts</string>
+    <string name="microphone">Microphone</string>
+    <string name="location">Location</string>
+    <string name="media">Media</string>
+    <string name="items">Items</string>
+    <string name="y_balance">Your balance</string>
+    <string name="connect_my_first_game">Connect my first game</string>
+    <string name="y_tasks_list_empty">Your tasks list is empty. That’s because your haven’t got any games connected yet. Let’s handle this!</string>
+    <string name="oops">Oops!</string>
 </resources>
